Add flex container for bottom of header, resize button
I needed a second flex container for the bottom of the header so that i
could change the flex direction to collumn and have the container bump
up against the headings img.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
     margin: 0px;
 }
 
+ul {
+    list-style: none;
+}
+
 .header {
     display: flex;
     flex-direction: column;
@@ -19,6 +23,11 @@ body {
     justify-content: space-between;
 }
 
-ul {
-    list-style: none;
+.h-bottom {
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    width: 100px;
 }
