Add img to header, resize img, space between img and content

--- a/style.css
+++ b/style.css
@@ -26,8 +26,21 @@ ul {
 .h-bottom {
     display: flex;
     flex-direction: column;
+    flex-basis: 600px;
 }
 
 button {
     width: 100px;
+}
+
+img {
+    width: 600px;
+    height: auto;
+    display: flex;
+    flex: 0 1 auto;
+}
+
+.img-align {
+    display: flex;
+    justify-content: space-between;
 }
