--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ li {
 .header {
     display: flex;
     flex-direction: column;
-    border: 1px dotted red;
     padding-left: 300px;
     padding-right: 300px;
     padding-bottom: 150px;
@@ -23,14 +22,12 @@ li {
 
 .links {
     display: flex;
-    border: 1px dotted red;
     gap: 20px;
     align-items: center;
 }
 
 .h-top {
     display: flex;
-    border: 1px dotted red;
     justify-content: space-between;
 }
 
@@ -51,6 +48,7 @@ img {
     height: auto;
     display: flex;
     flex: 0 1 auto;
+    
 }
 
 .img-align {
@@ -62,6 +60,7 @@ img {
     font-size: 48px;
     font-weight: 900;
     color: #F9FAf8;
+    margin-bottom: 20px;
 }
 
 .heading-info,
@@ -73,4 +72,9 @@ img {
 .logo {
     font-size: 24px;
     color: #f9faf8;
+}
+
+.heading-info {
+    margin-bottom: 15px;
+    width: 400px;
 }
