--- a/style.css
+++ b/style.css
@@ -78,3 +78,26 @@ img {
     margin-bottom: 15px;
     width: 400px;
 }
+
+.info {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+}
+
+.item {
+    display: flex;
+    flex-direction: column;
+}
+
+.box {
+    height: 200px;
+    width: 200px;
+    border: 4px solid #3882f6;
+}
+
+.all-items {
+    display: flex;
+}
