Added width to "all-items" container
When I tried to push the gap between "items" too large it was pushing
the right margin of the screen over so i put a defined width around
the "all-items" flex container and it seems to have fixed the issue.

--- a/style.css
+++ b/style.css
@@ -100,4 +100,8 @@ img {
 
 .all-items {
     display: flex;
+    gap: 40px;
+    border: 1px dotted red;
+    width: 1000px;
+    justify-content: center;
 }
