--- a/style.css
+++ b/style.css
@@ -43,11 +43,12 @@ button {
     color: #f9faf8;
 }
 
-img {
+.header img {
     width: 600px;
     height: auto;
     display: flex;
     flex: 0 1 auto;
+    margin-left: 0;
     
 }
 
@@ -90,12 +91,14 @@ img {
 .item {
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 
 .box {
     height: 200px;
     width: 200px;
     border: 4px solid #3882f6;
+    display: flex;
 }
 
 .all-items {
@@ -104,4 +107,8 @@ img {
     border: 1px dotted red;
     width: 1000px;
     justify-content: center;
+}
+
+.item img {
+    width: 200px;
 }
