--- a/style.css
+++ b/style.css
@@ -107,6 +107,7 @@ button {
     border: 1px dotted red;
     width: 1000px;
     justify-content: center;
+    margin-bottom: 80px;
 }
 
 .item img {
@@ -115,4 +116,10 @@ button {
 
 .item p {
     max-width: 200px;
+}
+
+.info-title {
+    font-size: 36px;
+    font-weight: 900;
+    margin-top: 40px;
 }
