--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ button {
     width: 200px;
     border: 4px solid #3882f6;
     display: flex;
+    border-radius: 8px;
 }
 
 .all-items {
@@ -166,6 +167,8 @@ button {
     padding-bottom: 50px;
     padding-left: 100px;
     padding-right: 100px;
+    align-items: center;
+    border-radius: 6px;
 }
 
 .cta-text {
